[package]
name = "markdown_my_project"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
log = "0.4.26"
log4rs = "1.3.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
walkdir = "2.3"
glob = "0.3"
indicatif = "0.17"
rayon = "1.7"

[dev-dependencies]
tempfile = "3.10"